--- a/Medportal/frontend/package.json
+++ b/Medportal/frontend/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "redux-thunk": "^3.1.0",
-    "remote-redux-devtools": "^0.5.16"
+    "remote-redux-devtools": "^0.5.16",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
